<resources>
    <string name="app_name">OlehVynnytskyi</string>
    <string name="add_bmi_details">Add BMI Details</string>
    <string name="bmi_details">BMI Details</string>
    <string name="calculate_header">Enter Personal Detail</string>
    <string name="name">Name</string>
    <string name="calculate_title">Calculate Your Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="body_mass_index">BODY MASS INDEX</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="interstitial_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="bmi_details_greeting">HELLO %s, YOU ARE %s</string>
    <string name="bmi_details_range">Normal BMI range: %skg/m2 - %skg/m2</string>
    <string name="bmi_ponderal_index">Ponderal Index: %skg/m3</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="underweight_severe_thinness">UNDERWEIGHT (SEVERE THINNESS)</string>
    <string name="Underweight_moderate_thinness">UNDERWEIGHT (MODERATE THINNESS)</string>
    <string name="underweight_mild_thinness">UNDERWEIGHT (MILD THINNESS)</string>
    <string name="normal_range">NORMAL</string>
    <string name="overweight_pre_obese">OVERWEIGHT (PRE-OBESE)</string>
    <string name="obese_class_1">OBESE (CLASS I)</string>
    <string name="obese_class_2">OBESE (CLASS II)</string>
    <string name="obese_class_3">OBESE (CLASS III)</string>
    <string name="normal_bmi_range">Normal BMI range: 18.5kg/m2 – 25kg/m2</string>
    <string name="install">INSTALL</string>
    <string name="ad">Ad</string>
    <string name="error_occurred">Error occurred!</string>
    <string name="authorities_fileprovider">com.olehvynnytskyi.android.bmi.provider</string>
    <string name="google_play_package">com.android.vending</string>
    <string name="google_play_url">https://play.google.com</string>
</resources>