<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.calculate.BmiCalculateFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="?attr/fontRalewayRegular"
        android:text="@string/calculate_header"
        android:textColor="?attr/colorMain"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="?attr/fontPoppinsLight"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:lines="1"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:singleLine="true"
        android:textColorHint="?attr/colorSecondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="?attr/fontPoppinsLight"
        android:text="@string/calculate_title"
        android:textColor="?attr/colorSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/weight"
        android:textSize="14sp"
        android:theme="@style/BMITextViewTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:text="@string/gender"
        android:textSize="14sp"
        android:theme="@style/BMITextViewTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/height"
        android:textSize="14sp"
        android:theme="@style/BMITextViewTheme"
        app:layout_constraintEnd_toStartOf="@id/tvGender"
        app:layout_constraintStart_toEndOf="@id/tvWeight"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardNumberPicker"
        android:layout_width="0dp"
        android:layout_height="128sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeight">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <NumberPicker
                android:id="@+id/npWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="14dp"
                android:theme="@style/BMINumberPickerTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewWeight"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_number_picker_line"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/npWeight"
                app:layout_constraintEnd_toEndOf="@id/npWeight"
                app:layout_constraintStart_toStartOf="@id/npWeight"
                app:layout_constraintTop_toTopOf="@id/npWeight"
                tools:visibility="visible" />

            <NumberPicker
                android:id="@+id/npHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:theme="@style/BMINumberPickerTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewHeight"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_number_picker_line"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/npHeight"
                app:layout_constraintEnd_toEndOf="@id/npHeight"
                app:layout_constraintStart_toStartOf="@id/npHeight"
                app:layout_constraintTop_toTopOf="@id/npHeight"
                tools:visibility="visible" />

            <NumberPicker
                android:id="@+id/npGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="14dp"
                android:theme="@style/BMINumberPickerTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewGender"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_number_picker_line"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/npGender"
                app:layout_constraintEnd_toEndOf="@id/npGender"
                app:layout_constraintStart_toStartOf="@id/npGender"
                app:layout_constraintTop_toTopOf="@id/npGender"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button_gradient"
        android:fontFamily="?attr/fontRalewayBold"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardNumberPicker" />

</androidx.constraintlayout.widget.ConstraintLayout>